infrastructure/providers/aws/andromeda/alpheratz-vpc/stack.yml
AWSTemplateFormatVersion: 2010-09-09
Description: The primary VPC in Andromeda.
# Metadata:
#   Instances:
#     Description:
#   Databases:
#     Description:
Parameters:
  Name:
    Type: String
    Description: Descriptive name for the VPC.
  CidrBlock:
    Type: String
    Description: CIDR address range for the entire VPC.
    AllowedPattern: ((\d{1,3})\.){3}\d{1,3}/\d{1,2}
    Default: 10.1.0.0/16
  PublicSubnet1CidrBlock:
    Type: String
    Description: Public Subnet 1
    AllowedPattern: ((\d{1,3})\.){3}\d{1,3}/\d{1,2}
  PrivateSubnet1CidrBlock:
    Type: String
    Description: Private Subnet 1
    AllowedPattern: ((\d{1,3})\.){3}\d{1,3}/\d{1,2}
# Rules:
# Mappings:
# Conditions:
# Transform:
Resources:
  AlpheratzVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref CidrBlock
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: !Ref Name
  AlpheratzPublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref 'PublicSubnet1CidrBlock'
      AvailabilityZone: !Join ['', [!Ref 'AWS::Region', 'a']]
      MapPublicIpOnLaunch: true
      VpcId: !Ref 'AlpheratzVPC'
      Tags:
        - Key: Name
          Value: !Sub ${Name} Public 1
        - Key: Group
          Value: !Ref Name
  AlpheratzPrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref 'PrivateSubnet1CidrBlock'
      AvailabilityZone: !Join ['', [!Ref 'AWS::Region', 'a']]
      VpcId: !Ref 'AlpheratzVPC'
      Tags:
        - Key: Name
          Value: !Sub ${Name} Private 1
        - Key: Group
          Value: !Ref Name
  AlpheratzIGW:
    Type: AWS::EC2::InternetGateway
    DependsOn: AlpheratzVPC
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${Name} Internet Gateway
        - Key: Group
          Value: !Ref Name
  AlpheratzIGWAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref AlpheratzVPC
      InternetGatewayId: !Ref AlpheratzIGW
  AlpheratzPublicRoutes:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'AlpheratzVPC'
      Tags:
        - Key: Name
          Value: Alpheratz Public Routes
        - Key: Group
          Value: Alpheratz
  AlpheratzPublicSubnet1Routes:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref 'AlpheratzPublicRoutes'
      SubnetId: !Ref 'AlpheratzPublicSubnet1'
  AlpheratzPublicDefaultRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId: !Ref 'AlpheratzPublicRoutes'
      GatewayId: !Ref 'AlpheratzIGW'
    DependsOn: AlpheratzIGWAttachment
  AlpheratzSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Alpheratz Hosts
      VpcId: !Ref 'AlpheratzVPC'
      Tags:
        - Key: Group
          Value: Alpheratz
        - Key: Name
          Value: Alpheratz Host Security Group
  AlpheratzSGIngressAllowSSH:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref 'AlpheratzSG'
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      CidrIp: 0.0.0.0/0
Outputs:
  AlpheratzVPC:
    Description: 'The primary VPC in Andromeda.'
    Value: !Ref AlpheratzVPC
    Export:
      Name: PrimaryVPC
  VpcId:
    Description: Resource ID for the Alpheratz VPC.
    Value: !Ref AlpheratzVPC
    Export:
      Name: Alpheratz-vpc-id
  VpcCidrBlock:
    Description: CIDR address range for the AlpheratzVPC.
    Value: !GetAtt AlpheratzVPC.CidrBlock
  AlpheratzPublicSubnet1:
    Description: 'public-tier subnet 1'
    Value: !Ref AlpheratzPublicSubnet1
    Export:
      Name: PublicSubnet1
  AlpheratzPrivateSubnet1:
    Description: 'private-tier subnet 1'
    Value: !Ref AlpheratzPrivateSubnet1
    Export:
      Name: PrivateSubnet1
  InternetGatewayId:
    Description: Resource ID for AlpheratzVPC's Internet Gateway.
    Value: !Ref AlpheratzIGW
